--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,67 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+
+ul {
+  list-style-type: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+/* #region task1 */
+#categories{
+  border-radius: 8px;
+  padding: 24px;
+  width: 440px;
+  background-color: #fff;
+}
+
+.item{
+  border-radius: 8px;
+  padding: 16px;
+  width: 392px;
+  background-color: #f6f6fe;
+  margin-bottom: 24px;
+}
+h2{
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  padding-bottom: 16px;
+}
+.item ul{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.item ul li{
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  padding: 8px 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+/* #endregion */
+
+/* #region task2 */
+
+/* #endregion */
