--- a/css/common.css
+++ b/css/common.css
@@ -157,5 +157,37 @@ h2{
 /* #endregion */
 
 /* #region task5 */
-
+.widget{
+    border-radius: 8px;
+    padding: 100px 88px;
+    width: 345px;
+    height: 280px;
+    background-color: #fff;
+}
+.widget p{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+    margin-bottom: 16px;
+}
+.change-color{
+    border-radius: 8px;
+    border: none;
+    padding: 8px 16px;
+    width: 148px;
+    height: 40px;
+    color: #ffffff;
+    background-color: #4e75ff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    transition: background-color, 500ms, cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.change-color:hover{
+  background-color: blue;
+}
 /* #endregion */
