--- a/css/common.css
+++ b/css/common.css
@@ -14,10 +14,10 @@ body {
 }
 
 ul {
-  /* list-style-type: none; */
+  list-style-type: none;
   margin-top: 0;
   margin-bottom: 0;
-  /* padding-left: 0; */
+  padding-left: 0;
 }
 
 h1,
@@ -48,7 +48,7 @@ p {
   width: 392px;
   background-color: #f6f6fe;
 }
-h2{
+.title-task1{
   font-weight: 600;
   font-size: 24px;
   line-height: 1.33;
@@ -56,12 +56,12 @@ h2{
   color: #2e2f42;
   padding-bottom: 16px;
 }
-.item ul{
+.category-list{
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
-.item ul li{
+.category-list-item{
   border: 1px solid #808080;
   border-radius: 4px;
   width: 360px;
@@ -254,6 +254,6 @@ h2{
   width: 486px;
 }
 .box-random{
-  
+  z-index: 999;
 }
 /* #endregion */
